package movie

type ContentsProvider struct {
	value string
}
