package movie

type Length struct {
	value int
}
